--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ think about :)
 
 <br/><br/><br/><br/>
 <center>
-<img src="../trucs/Vancouver-1.jpg" width="600px"
+<img src="trucs/Vancouver-1.jpg" width="600px"
      class="InTheMiddle"
      title="En partance, Vancouver 2014">
 </center>
