--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ think about :)
     <li>[D] A reference is introduced on one line in the form
     <<!---->script language="javascript">bibref("Ramare*12")<<!---->/script>
     where Ramare*12 is the key of the bibtex entry, which has to be
-    introduced in the Local-TME-EMT.bib file :) 
+    introduced in the GlobalBiblioFile/Global.bib file :) 
     </li>
   </ul>
 </blockquote>
