--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
 
 <HTML>
 <HEAD>
-   <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=iso-8859-1">
+   <META HTTP-EQUIV="Content-Type" CONTENT="text/html;
+					    charset=iso-8859-1">
+     <meta name="keywords"
+	   content="TME-EMT, Explicit estimates,
+		    Th&eacute;orie multiplicative explicite, 
+		    Explicit Multiplicative Number Theory, Prime
+		    numbers, Moebius function, Riemann zeta-function">
+       <meta name="description" content="TME-EMT Project">
 
 <link rel="stylesheet" href="spip-reset.css" type="text/css" />
 <link rel="stylesheet" href="spip-typo.css" type="text/css" />
