--- a/Biblio/Biblio.html
+++ b/Biblio/Biblio.html
@@ -6,17 +6,17 @@
 <HEAD>
    <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=iso-8859-1">
 
-<link rel="stylesheet" href="../../spip-reset.css" type="text/css" />
-<link rel="stylesheet" href="../../spip-typo.css" type="text/css" />
+<link rel="stylesheet" href="../spip-reset.css" type="text/css" />
+<link rel="stylesheet" href="../spip-typo.css" type="text/css" />
 
-<link rel="stylesheet" href="../../spip-clear.css" type="text/css" />
-<link rel="stylesheet" href="../../spip-style.css" type="text/css" />
+<link rel="stylesheet" href="../spip-clear.css" type="text/css" />
+<link rel="stylesheet" href="../spip-style.css" type="text/css" />
 
-<link rel="stylesheet" href="../../spip-layout.css" type="text/css" />
+<link rel="stylesheet" href="../spip-layout.css" type="text/css" />
 
-<link rel="stylesheet" href="../../MiseEnPage.css" type="text/css" />
+<link rel="stylesheet" href="../MiseEnPage.css" type="text/css" />
 
-   <script language="javascript"  src="../../MiseEnPage.js"></script>
+   <script language="javascript"  src="../MiseEnPage.js"></script>
 <!-- ============================================-->
 <!-- Mathematics is being rendered by MathJax    -->
 <!-- ============================================-->
