--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ track of the current knowledge. By the way, the acronym TME-EMT stands for
   <font size=+1>T</font>heory
 </blockquote>
 Here are the contributors for now: Olivier Bordell&egrave;s, Pierre
-Dusart, Charles Greathouse, Harald Helfgott, Pieter
+Dusart, Charles Greathouse, Harald Helfgott, Ethan Lee, Pieter
 Moree, Akhilesh P, Olivier Ramar&eacute;, Enrique Trevi&ntilde;o.
 </blockquote>
 
