--- a/Biblio/Biblio.html
+++ b/Biblio/Biblio.html
@@ -1088,7 +1088,13 @@ MathJax.Hub.Config({
      <span class="refs"> Nieuw Arch. Wiskd. (5),  1(1), 55--56.</span>
    </li>
 </div>
-<div class="evenselection">   <li class="bibentry" id="Platt-Trudgian*21a"><a name="Platt-Trudgian*21a">
+<div class="evenselection">   <li class="bibentry" id="Patel*22"><a name="Patel*22">
+     <span class="authoryear" alt="Patel*22">Patel, Dhir. 2022</span></a>
+<br>
+     &nbsp;&nbsp;&nbsp;<span class="title">An explicit upper bound for {$|\zeta (1+it) |$}.</span>
+     <span class="refs"> Indag. Math. (N.S.),  33(5), 1012--1032.</span>
+   </li>
+   <li class="bibentry" id="Platt-Trudgian*21a"><a name="Platt-Trudgian*21a">
      <span class="authoryear" alt="Platt-Trudgian*21a">Platt, Dave, &amp; Trudgian, Tim. 2021a</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">The Riemann hypothesis is true up to {$3\cdot10^{12}$}.</span>
@@ -1112,14 +1118,14 @@ MathJax.Hub.Config({
      &nbsp;&nbsp;&nbsp;<span class="title">Computing degree 1 L-function rigorously.</span>
      <span class="refs">Ph.D. thesis, Mathematics.  arXiv:1305.3087.</span>
    </li>
-   <li class="bibentry" id="Platt*13"><a name="Platt*13">
+</div>
+<div class="oddselection">   <li class="bibentry" id="Platt*13"><a name="Platt*13">
      <span class="authoryear" alt="Platt*13">Platt, D.J. 2013</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">Numerical computations concerning the GRH.</span>
   <a href="http://arxiv.org/abs/1305.3087">URL</a>     <span class="refs">Ph.D. thesis.   .</span>
    </li>
-</div>
-<div class="oddselection">   <li class="bibentry" id="Ramare*12-0"><a name="Ramare*12-0">
+   <li class="bibentry" id="Ramare*12-0"><a name="Ramare*12-0">
      <span class="authoryear" alt="Ramare*12-0">Platt, D.J., &amp; Ramar&eacute;, O. 2017</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">Explicit estimates: from ${\Lambda}(n)$ in arithmetic progressions to   ${\Lambda}(n)/n$.</span>
@@ -1143,14 +1149,14 @@ MathJax.Hub.Config({
      &nbsp;&nbsp;&nbsp;<span class="title">Sur une in&eacute;galit&eacute; de Montgomery et Vaughan.</span>
      <span class="refs"> Enseign. Math.,  30, 95--113.</span>
    </li>
-   <li class="bibentry" id="Qiu*91"><a name="Qiu*91">
+</div>
+<div class="evenselection">   <li class="bibentry" id="Qiu*91"><a name="Qiu*91">
      <span class="authoryear" alt="Qiu*91">Qiu, Zhuo Ming. 1991</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">An inequality of Vinogradov for character sums.</span>
      <span class="refs"> Shandong Daxue Xuebao Ziran Kexue Ban,  26(1), 125--128.</span>
    </li>
-</div>
-<div class="evenselection">   <li class="bibentry" id="Rademacher*59"><a name="Rademacher*59">
+   <li class="bibentry" id="Rademacher*59"><a name="Rademacher*59">
      <span class="authoryear" alt="Rademacher*59">Rademacher, H. 1959</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">On the Phragm&eacute;n-Lindel&ouml;f theorem and some applications.</span>
@@ -1174,14 +1180,14 @@ MathJax.Hub.Config({
      &nbsp;&nbsp;&nbsp;<span class="title">Sur un th&eacute;or&egrave;me de Mertens.</span>
      <span class="refs"> Manuscripta Math.,  108, 483--494.</span>
    </li>
-   <li class="bibentry" id="Ramare*02-??"><a name="Ramare*02-??">
+</div>
+<div class="oddselection">   <li class="bibentry" id="Ramare*02-??"><a name="Ramare*02-??">
      <span class="authoryear" alt="Ramare*02-??">Ramar&eacute;, O. 2004</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">Approximate Formulae for $L(1,\chi)$, II.</span>
      <span class="refs"> Acta Arith.,  112, 141--149.</span>
    </li>
-</div>
-<div class="oddselection">   <li class="bibentry" id="Ramare*07a"><a name="Ramare*07a">
+   <li class="bibentry" id="Ramare*07a"><a name="Ramare*07a">
      <span class="authoryear" alt="Ramare*07a">Ramar&eacute;, O. 2007</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">Eigenvalues in the large sieve inequality.</span>
@@ -1205,14 +1211,14 @@ MathJax.Hub.Config({
      &nbsp;&nbsp;&nbsp;<span class="title">Explicit estimates for the summatory function of ${\Lambda}(n)/n$   from the one of ${\Lambda}(n)$.</span>
      <span class="refs"> Acta Arith.,  159(2), 113--122.</span>
    </li>
-   <li class="bibentry" id="Ramare*12-2"><a name="Ramare*12-2">
+</div>
+<div class="evenselection">   <li class="bibentry" id="Ramare*12-2"><a name="Ramare*12-2">
      <span class="authoryear" alt="Ramare*12-2">Ramar&eacute;, O. 2013b</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">From explicit estimates for the primes to explicit estimates for the   Moebius function.</span>
      <span class="refs"> Acta Arith.,  157(4), 365--379.</span>
    </li>
-</div>
-<div class="evenselection">   <li class="bibentry" id="Ramare*12-4"><a name="Ramare*12-4">
+   <li class="bibentry" id="Ramare*12-4"><a name="Ramare*12-4">
      <span class="authoryear" alt="Ramare*12-4">Ramar&eacute;, O. 2013c</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">Some elementary explicit bounds for two mollifications of the   Moebius function.</span>
@@ -1236,14 +1242,14 @@ MathJax.Hub.Config({
      &nbsp;&nbsp;&nbsp;<span class="title">An explicit density estimate for Dirichlet $L$-series.</span>
      <span class="refs"> Math. Comp.,  85(297), 335--356.</span>
    </li>
-   <li class="bibentry" id="Ramare*14-6"><a name="Ramare*14-6">
+</div>
+<div class="oddselection">   <li class="bibentry" id="Ramare*14-6"><a name="Ramare*14-6">
      <span class="authoryear" alt="Ramare*14-6">Ramar&eacute;, O. 2016</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">Modified truncated Perron formulae.</span>
      <span class="refs"> Ann. Blaise Pascal,  23(1), 109--128.</span>
    </li>
-</div>
-<div class="oddselection">   <li class="bibentry" id="Ramare-Rumely*96"><a name="Ramare-Rumely*96">
+   <li class="bibentry" id="Ramare-Rumely*96"><a name="Ramare-Rumely*96">
      <span class="authoryear" alt="Ramare-Rumely*96">Ramar&eacute;, O., &amp; Rumely, R. 1996</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">Primes in arithmetic progressions.</span>
@@ -1267,14 +1273,14 @@ MathJax.Hub.Config({
      &nbsp;&nbsp;&nbsp;<span class="title">Modular ternary additive problems with irregular or prime numbers.</span>
      <span class="refs"> Tr. Mat. Inst. Steklova,  314(Analiticheskaya i   Kombinatornaya Teoriya Chisel), 211--247.  English version published in Proc. Steklov Inst. Math. {314}   (2021), no. 1, 203--237.</span>
    </li>
-   <li class="bibentry" id="Robin*83-1"><a name="Robin*83-1">
+</div>
+<div class="evenselection">   <li class="bibentry" id="Robin*83-1"><a name="Robin*83-1">
      <span class="authoryear" alt="Robin*83-1">Robin, G. 1983a</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">Estimation de la fonction de Tchebychef $\theta$ sur le $k$-i&egrave;me   nombres premiers et grandes valeurs de la fonction $\omega(n)$ nombre de   diviseurs premiers de $n$.</span>
      <span class="refs"> Acta Arith.,  42, 367--389.</span>
    </li>
-</div>
-<div class="evenselection">   <li class="bibentry" id="Robin*83-0"><a name="Robin*83-0">
+   <li class="bibentry" id="Robin*83-0"><a name="Robin*83-0">
      <span class="authoryear" alt="Robin*83-0">Robin, G. 1983b</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">Grandes valeurs de fonctions arithm&eacute;tiques et probl&egrave;mes   d'optimisation en nombres entiers.</span>
@@ -1298,14 +1304,14 @@ MathJax.Hub.Config({
      &nbsp;&nbsp;&nbsp;<span class="title">Real roots of Dirichlet $L$-series.</span>
      <span class="refs"> Bull. Amer. Math. Soc.,  55, 906--913.</span>
    </li>
-   <li class="bibentry" id="Rosser*50"><a name="Rosser*50">
+</div>
+<div class="oddselection">   <li class="bibentry" id="Rosser*50"><a name="Rosser*50">
      <span class="authoryear" alt="Rosser*50">Rosser, J.B. 1950</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">Real roots of Dirichlet $L$-series.</span>
      <span class="refs"> J. Res. Nat. Bur. Standards,  505--514.</span>
    </li>
-</div>
-<div class="oddselection">   <li class="bibentry" id="Rosser-Schoenfeld*62"><a name="Rosser-Schoenfeld*62">
+   <li class="bibentry" id="Rosser-Schoenfeld*62"><a name="Rosser-Schoenfeld*62">
      <span class="authoryear" alt="Rosser-Schoenfeld*62">Rosser, J.B., &amp; Schoenfeld, L. 1962</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">Approximate formulas for some functions of prime numbers.</span>
@@ -1329,14 +1335,14 @@ MathJax.Hub.Config({
      &nbsp;&nbsp;&nbsp;<span class="title">A sharp region where {$\pi(x)-{\rm li}(x)$} is positive.</span>
      <span class="refs"> Math. Comp.,  79(272), 2395--2405.</span>
    </li>
-   <li class="bibentry" id="Schoenfeld*69"><a name="Schoenfeld*69">
+</div>
+<div class="evenselection">   <li class="bibentry" id="Schoenfeld*69"><a name="Schoenfeld*69">
      <span class="authoryear" alt="Schoenfeld*69">Schoenfeld, L. 1969</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">An improved estimate for the summatory function of the M&ouml;bius   function.</span>
      <span class="refs"> Acta Arith.,  15, 223--233.</span>
    </li>
-</div>
-<div class="evenselection">   <li class="bibentry" id="Schoenfeld*76"><a name="Schoenfeld*76">
+   <li class="bibentry" id="Schoenfeld*76"><a name="Schoenfeld*76">
      <span class="authoryear" alt="Schoenfeld*76">Schoenfeld, L. 1976</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">Sharper bounds for the Chebyshev Functions $\vartheta(X)$ and   $\psi(X)$ II.</span>
@@ -1360,14 +1366,14 @@ MathJax.Hub.Config({
      &nbsp;&nbsp;&nbsp;<span class="title">Calculation of Dirichlet {$L$}-functions.</span>
      <span class="refs"> Math. Comp.,  23, 489--497.</span>
    </li>
-   <li class="bibentry" id="Stechkin*70"><a name="Stechkin*70">
+</div>
+<div class="oddselection">   <li class="bibentry" id="Stechkin*70"><a name="Stechkin*70">
      <span class="authoryear" alt="Stechkin*70">Stechkin, S.B. 1970</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">Zeros of Riemann zeta-function.</span>
      <span class="refs"> Math. Notes,  8, 706--711.</span>
    </li>
-</div>
-<div class="oddselection">   <li class="bibentry" id="Stechkin*89"><a name="Stechkin*89">
+   <li class="bibentry" id="Stechkin*89"><a name="Stechkin*89">
      <span class="authoryear" alt="Stechkin*89">Stechkin, S.B. 1989</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">Rational inequalities and zeros of the Riemann zeta-function.</span>
@@ -1391,14 +1397,14 @@ MathJax.Hub.Config({
      &nbsp;&nbsp;&nbsp;<span class="title">The least inert prime in a real quadratic field.</span>
      <span class="refs"> Math. Comp.,  81(279), 1777--1797.</span>
    </li>
-   <li class="bibentry" id="Trevino*15-2"><a name="Trevino*15-2">
+</div>
+<div class="evenselection">   <li class="bibentry" id="Trevino*15-2"><a name="Trevino*15-2">
      <span class="authoryear" alt="Trevino*15-2">Trevi&ntilde;o, Enrique. 2015a</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">The Burgess inequality and the least {$k$}th power non-residue.</span>
      <span class="refs"> Int. J. Number Theory,  11(5), 1653--1678.</span>
    </li>
-</div>
-<div class="evenselection">   <li class="bibentry" id="Trevino*15"><a name="Trevino*15">
+   <li class="bibentry" id="Trevino*15"><a name="Trevino*15">
      <span class="authoryear" alt="Trevino*15">Trevi&ntilde;o, Enrique. 2015b</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">The least {$k$}-th power non-residue.</span>
@@ -1422,14 +1428,14 @@ MathJax.Hub.Config({
      &nbsp;&nbsp;&nbsp;<span class="title">An improved upper bound for the error in the zero-counting formulae   for Dirichlet $L$-function and Dedekind zeta-function on the critical   line.</span>
      <span class="refs"> Math. Comp.,  84(293), 1439--1450.</span>
    </li>
-   <li class="bibentry" id="Trudgian*15-2"><a name="Trudgian*15-2">
+</div>
+<div class="oddselection">   <li class="bibentry" id="Trudgian*15-2"><a name="Trudgian*15-2">
      <span class="authoryear" alt="Trudgian*15-2">Trudgian, Tim. 2015b</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">Bounds on the number of Diophantine quintuples.</span>
      <span class="refs"> J. Number Theory,  157, 233--249.</span>
    </li>
-</div>
-<div class="oddselection">   <li class="bibentry" id="Trudgian*16"><a name="Trudgian*16">
+   <li class="bibentry" id="Trudgian*16"><a name="Trudgian*16">
      <span class="authoryear" alt="Trudgian*16">Trudgian, Tim. 2016</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">Updating the error term in the prime number theorem.</span>
@@ -1453,14 +1459,14 @@ MathJax.Hub.Config({
      &nbsp;&nbsp;&nbsp;<span class="title">On primes in arithmetic progressions.</span>
      <span class="refs"> Acta Arith.,  11, 209--216.</span>
    </li>
-   <li class="bibentry" id="Vinogradov*54"><a name="Vinogradov*54">
+</div>
+<div class="evenselection">   <li class="bibentry" id="Vinogradov*54"><a name="Vinogradov*54">
      <span class="authoryear" alt="Vinogradov*54">Vinogradov, I.M. 2004</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">The method of trigonometrical sums in the theory of numbers.</span>
      <span class="refs">Mineola, NY: Dover Publications Inc.  Translated from the Russian, revised and annotated by K. F. Roth and   Anne Davenport, Reprint of the 1954 translation.</span>
    </li>
-</div>
-<div class="evenselection">   <li class="bibentry" id="VonSterneck*98"><a name="VonSterneck*98">
+   <li class="bibentry" id="VonSterneck*98"><a name="VonSterneck*98">
      <span class="authoryear" alt="VonSterneck*98">von Sterneck, R.D. 1898</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">Bemerkung &uuml;ber die Summierung einiger zahlentheorischen   Funktionen.</span>
@@ -1484,14 +1490,14 @@ MathJax.Hub.Config({
      &nbsp;&nbsp;&nbsp;<span class="title">Real zeros of real odd Dirichlet L-functions.</span>
      <span class="refs"> Math. Comp.,  73(245), 415--423.</span>
    </li>
-   <li class="bibentry" id="Wedeniwski*02"><a name="Wedeniwski*02">
+</div>
+<div class="oddselection">   <li class="bibentry" id="Wedeniwski*02"><a name="Wedeniwski*02">
      <span class="authoryear" alt="Wedeniwski*02">Wedeniwski, S. 2002</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">On the Riemann hypothesis.</span>
      <span class="refs">http://www.zetagrid.net/zeta/announcements.html</span>
    </li>
-</div>
-<div class="oddselection">   <li class="bibentry" id="Wolke*83"><a name="Wolke*83">
+   <li class="bibentry" id="Wolke*83"><a name="Wolke*83">
      <span class="authoryear" alt="Wolke*83">Wolke, D. 1983</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">On the explicit formula of Riemann-von Mangoldt, II.</span>
@@ -1503,7 +1509,7 @@ MathJax.Hub.Config({
      &nbsp;&nbsp;&nbsp;<span class="title">First occurence prime gaps.</span>
      <span class="refs"> Math. Comp.,  52(185), 221--224.</span>
    </li>
-</div><br><div class="discret">There are 232 references.</div>
+</div><br><div class="discret">There are 233 references.</div>
 </ul>
 
 
