--- a/Biblio/Biblio.html
+++ b/Biblio/Biblio.html
@@ -1416,33 +1416,33 @@ MathJax.Hub.Config({
      &nbsp;&nbsp;&nbsp;<span class="title">Improvements to Turing's method.</span>
      <span class="refs"> Math. Comp.,  80(276), 2259--2279.</span>
    </li>
-   <li class="bibentry" id="Trudgian*12b"><a name="Trudgian*12b">
-     <span class="authoryear" alt="Trudgian*12b">Trudgian, T. 2012</span></a>
-<br>
-     &nbsp;&nbsp;&nbsp;<span class="title">A new upper bound for $|\zeta(1+it)|$.</span>
-  <a href="http://arxiv.org/abs/1210.6743">URL</a>     <span class="refs"> .</span>
-   </li>
    <li class="bibentry" id="Trudgian*14-1"><a name="Trudgian*14-1">
      <span class="authoryear" alt="Trudgian*14-1">Trudgian, T. 2015a</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">An improved upper bound for the error in the zero-counting formulae   for Dirichlet $L$-function and Dedekind zeta-function on the critical   line.</span>
      <span class="refs"> Math. Comp.,  84(293), 1439--1450.</span>
    </li>
-</div>
-<div class="oddselection">   <li class="bibentry" id="Trudgian*15-2"><a name="Trudgian*15-2">
+   <li class="bibentry" id="Trudgian*15-2"><a name="Trudgian*15-2">
      <span class="authoryear" alt="Trudgian*15-2">Trudgian, Tim. 2015b</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">Bounds on the number of Diophantine quintuples.</span>
      <span class="refs"> J. Number Theory,  157, 233--249.</span>
    </li>
-   <li class="bibentry" id="Trudgian*16"><a name="Trudgian*16">
+</div>
+<div class="oddselection">   <li class="bibentry" id="Trudgian*16"><a name="Trudgian*16">
      <span class="authoryear" alt="Trudgian*16">Trudgian, Tim. 2016</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">Updating the error term in the prime number theorem.</span>
      <span class="refs"> Ramanujan J.,  39(2), 225--234.</span>
    </li>
+   <li class="bibentry" id="Trudgian*12b"><a name="Trudgian*12b">
+     <span class="authoryear" alt="Trudgian*12b">Trudgian, Timothy. 2014a</span></a>
+<br>
+     &nbsp;&nbsp;&nbsp;<span class="title">A new upper bound for {$|\zeta(1+it)|$}.</span>
+     <span class="refs"> Bull. Aust. Math. Soc.,  89(2), 259--264.</span>
+   </li>
    <li class="bibentry" id="Trudgian*13"><a name="Trudgian*13">
-     <span class="authoryear" alt="Trudgian*13">Trudgian, Timothy S. 2014</span></a>
+     <span class="authoryear" alt="Trudgian*13">Trudgian, Timothy S. 2014b</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">An improved upper bound for the argument of the Riemann   zeta-function on the critical line II.</span>
      <span class="refs"> J. Number Theory,  134, 280--292.</span>
