--- a/index.html
+++ b/index.html
@@ -136,12 +136,12 @@ Moree, Akhilesh P, Olivier Ramar&eacute;, Enrique Trevi&ntilde;o.
 </center>
 
 <center>
-[22 Septembre 2021]
+[15 Juillet 2023]
 &nbsp;<img src="trucs/construction.gif" width="70px" class="InTheMiddle"/>
-&nbsp;Working on it ! &nbsp;[September 22nd, 2021]
+&nbsp;Working on it ! &nbsp;[July 15th, 2023]
 </center>
 <br>
-
+<a name="GlobalIndex"></a>
   <div class="half-col">
 <ul class="tme-emt-main-menu">
   <img src="trucs/Foroyar-far-restrict-2.JPG"
