--- a/Biblio/Biblio.html
+++ b/Biblio/Biblio.html
@@ -58,7 +58,11 @@ MathJax.Hub.Config({
 <script language="javascript">
   BandeauGeneral(2, "../../", [6,0]);
 </script>
-	
+<br>
+<div class="Back">
+
+  <a href="../index.html#GlobalIndex" class="BackToIndex">[Back to the index]</a>
+</div>	
 <dl id="MenuDroit"> 
 <dt>Navigation</dt>
 <dd><a href="#Top">Back to top</a></dd>
