--- a/index.html
+++ b/index.html
@@ -197,6 +197,8 @@ Moree, Akhilesh P, Olivier Ramar&eacute;, Enrique Trevi&ntilde;o.
   <li class = "tme-emt-main-menu-item">Analytic Number Theory in Number Fields
   <ul class="tme-emt-second-menu">
     <li class="tme-emt-second-menu-item"><a href="Articles/Art18.html">Bounds on the Dedekind zeta-function</a></li>
+    <li class="tme-emt-second-menu-item"><a href="Articles/Art20.html">Primes
+    in number fields</a></li>
   </ul>  
   <li class = "tme-emt-main-menu-item">Applications
   <ul class="tme-emt-second-menu">
