--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@ Moree, Akhilesh P, Olivier Ramar&eacute;, Enrique Trevi&ntilde;o.
 </center>
 
 <center>
-[15 Juillet 2023]
+[6 F&eacute;vrier 2024]
 &nbsp;<img src="trucs/construction.gif" width="70px" class="InTheMiddle"/>
-&nbsp;Working on it ! &nbsp;[July 15th, 2023]
+&nbsp;Working on it ! &nbsp;[February 6th, 2024]
 </center>
 <br>
 <a name="GlobalIndex"></a>
