--- a/Biblio/Biblio.html
+++ b/Biblio/Biblio.html
@@ -1327,20 +1327,26 @@ MathJax.Hub.Config({
      &nbsp;&nbsp;&nbsp;<span class="title">Modular ternary additive problems with irregular or prime numbers.</span>
      <span class="refs"> Tr. Mat. Inst. Steklova,  314(Analiticheskaya i   Kombinatornaya Teoriya Chisel), 211--247.  English version published in Proc. Steklov Inst. Math. {314}   (2021), no. 1, 203--237.</span>
    </li>
+   <li class="bibentry" id="Riesel-Vaughan*83"><a name="Riesel-Vaughan*83">
+     <span class="authoryear" alt="Riesel-Vaughan*83">Riesel, H., &amp; Vaughan, R.C. 1983</span></a>
+<br>
+     &nbsp;&nbsp;&nbsp;<span class="title">On sums of primes.</span>
+     <span class="refs"> Ark. Mat.,  21, 46--74.</span>
+   </li>
    <li class="bibentry" id="Robin*83-1"><a name="Robin*83-1">
      <span class="authoryear" alt="Robin*83-1">Robin, G. 1983a</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">Estimation de la fonction de Tchebychef $\theta$ sur le $k$-i&egrave;me   nombres premiers et grandes valeurs de la fonction $\omega(n)$ nombre de   diviseurs premiers de $n$.</span>
      <span class="refs"> Acta Arith.,  42, 367--389.</span>
    </li>
-   <li class="bibentry" id="Robin*83-0"><a name="Robin*83-0">
+</div>
+<div class="evenselection">   <li class="bibentry" id="Robin*83-0"><a name="Robin*83-0">
      <span class="authoryear" alt="Robin*83-0">Robin, G. 1983b</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">Grandes valeurs de fonctions arithm&eacute;tiques et probl&egrave;mes   d'optimisation en nombres entiers.</span>
      <span class="refs">Ph.D. thesis, Universit&eacute; de Limoges.</span>
    </li>
-</div>
-<div class="evenselection">   <li class="bibentry" id="Rosser*38"><a name="Rosser*38">
+   <li class="bibentry" id="Rosser*38"><a name="Rosser*38">
      <span class="authoryear" alt="Rosser*38">Rosser, J.B. 1938</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">The $n$-th prime is greater than $n\log n$.</span>
@@ -1364,14 +1370,14 @@ MathJax.Hub.Config({
      &nbsp;&nbsp;&nbsp;<span class="title">Real roots of Dirichlet $L$-series.</span>
      <span class="refs"> J. Res. Nat. Bur. Standards,  505--514.</span>
    </li>
-   <li class="bibentry" id="Rosser-Schoenfeld*62"><a name="Rosser-Schoenfeld*62">
+</div>
+<div class="oddselection">   <li class="bibentry" id="Rosser-Schoenfeld*62"><a name="Rosser-Schoenfeld*62">
      <span class="authoryear" alt="Rosser-Schoenfeld*62">Rosser, J.B., &amp; Schoenfeld, L. 1962</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">Approximate formulas for some functions of prime numbers.</span>
      <span class="refs"> Illinois J. Math.,  6, 64--94.</span>
    </li>
-</div>
-<div class="oddselection">   <li class="bibentry" id="Rosser-Schoenfeld*75"><a name="Rosser-Schoenfeld*75">
+   <li class="bibentry" id="Rosser-Schoenfeld*75"><a name="Rosser-Schoenfeld*75">
      <span class="authoryear" alt="Rosser-Schoenfeld*75">Rosser, J.B., &amp; Schoenfeld, L. 1975</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">Sharper bounds for the Chebyshev Functions $\vartheta(X)$ and   $\psi(X)$.</span>
@@ -1395,14 +1401,14 @@ MathJax.Hub.Config({
      &nbsp;&nbsp;&nbsp;<span class="title">An improved estimate for the summatory function of the M&ouml;bius   function.</span>
      <span class="refs"> Acta Arith.,  15, 223--233.</span>
    </li>
-   <li class="bibentry" id="Schoenfeld*76"><a name="Schoenfeld*76">
+</div>
+<div class="evenselection">   <li class="bibentry" id="Schoenfeld*76"><a name="Schoenfeld*76">
      <span class="authoryear" alt="Schoenfeld*76">Schoenfeld, L. 1976</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">Sharper bounds for the Chebyshev Functions $\vartheta(X)$ and   $\psi(X)$ II.</span>
      <span class="refs"> Math. Comp.,  30(134), 337--360.</span>
    </li>
-</div>
-<div class="evenselection">   <li class="bibentry" id="Selberg*43"><a name="Selberg*43">
+   <li class="bibentry" id="Selberg*43"><a name="Selberg*43">
      <span class="authoryear" alt="Selberg*43">Selberg, A. 1943</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">On the normal density of primes in small intervals, and the   difference between consecutive primes.</span>
@@ -1426,14 +1432,14 @@ MathJax.Hub.Config({
      &nbsp;&nbsp;&nbsp;<span class="title">Zeros of Riemann zeta-function.</span>
      <span class="refs"> Math. Notes,  8, 706--711.</span>
    </li>
-   <li class="bibentry" id="Stechkin*89"><a name="Stechkin*89">
+</div>
+<div class="oddselection">   <li class="bibentry" id="Stechkin*89"><a name="Stechkin*89">
      <span class="authoryear" alt="Stechkin*89">Stechkin, S.B. 1989</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">Rational inequalities and zeros of the Riemann zeta-function.</span>
      <span class="refs"> Trudy Mat. Inst. Steklov (english translation: in Proc. Steklov   Inst. Math. 189 (1990)),  189, 127--134.</span>
    </li>
-</div>
-<div class="oddselection">   <li class="bibentry" id="Sunley*73"><a name="Sunley*73">
+   <li class="bibentry" id="Sunley*73"><a name="Sunley*73">
      <span class="authoryear" alt="Sunley*73">Sunley, Judith S. 1973</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">Class numbers of totally imaginary quadratic extensions of totally   real fields.</span>
@@ -1457,14 +1463,14 @@ MathJax.Hub.Config({
      &nbsp;&nbsp;&nbsp;<span class="title">The least inert prime in a real quadratic field.</span>
      <span class="refs"> Math. Comp.,  81(279), 1777--1797.</span>
    </li>
-   <li class="bibentry" id="Trevino*15-2"><a name="Trevino*15-2">
+</div>
+<div class="evenselection">   <li class="bibentry" id="Trevino*15-2"><a name="Trevino*15-2">
      <span class="authoryear" alt="Trevino*15-2">Trevi&ntilde;o, Enrique. 2015a</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">The Burgess inequality and the least {$k$}th power non-residue.</span>
      <span class="refs"> Int. J. Number Theory,  11(5), 1653--1678.</span>
    </li>
-</div>
-<div class="evenselection">   <li class="bibentry" id="Trevino*15"><a name="Trevino*15">
+   <li class="bibentry" id="Trevino*15"><a name="Trevino*15">
      <span class="authoryear" alt="Trevino*15">Trevi&ntilde;o, Enrique. 2015b</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">The least {$k$}-th power non-residue.</span>
@@ -1488,14 +1494,14 @@ MathJax.Hub.Config({
      &nbsp;&nbsp;&nbsp;<span class="title">Bounds on the number of Diophantine quintuples.</span>
      <span class="refs"> J. Number Theory,  157, 233--249.</span>
    </li>
-   <li class="bibentry" id="Trudgian*16"><a name="Trudgian*16">
+</div>
+<div class="oddselection">   <li class="bibentry" id="Trudgian*16"><a name="Trudgian*16">
      <span class="authoryear" alt="Trudgian*16">Trudgian, Tim. 2016</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">Updating the error term in the prime number theorem.</span>
      <span class="refs"> Ramanujan J.,  39(2), 225--234.</span>
    </li>
-</div>
-<div class="oddselection">   <li class="bibentry" id="Trudgian*12b"><a name="Trudgian*12b">
+   <li class="bibentry" id="Trudgian*12b"><a name="Trudgian*12b">
      <span class="authoryear" alt="Trudgian*12b">Trudgian, Timothy. 2014a</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">A new upper bound for {$|\zeta(1+it)|$}.</span>
@@ -1519,14 +1525,14 @@ MathJax.Hub.Config({
      &nbsp;&nbsp;&nbsp;<span class="title">On primes in arithmetic progressions.</span>
      <span class="refs"> Acta Arith.,  11, 209--216.</span>
    </li>
-   <li class="bibentry" id="Vinogradov*54"><a name="Vinogradov*54">
+</div>
+<div class="evenselection">   <li class="bibentry" id="Vinogradov*54"><a name="Vinogradov*54">
      <span class="authoryear" alt="Vinogradov*54">Vinogradov, I.M. 2004</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">The method of trigonometrical sums in the theory of numbers.</span>
      <span class="refs">Mineola, NY: Dover Publications Inc.  Translated from the Russian, revised and annotated by K. F. Roth and   Anne Davenport, Reprint of the 1954 translation.</span>
    </li>
-</div>
-<div class="evenselection">   <li class="bibentry" id="VonSterneck*98"><a name="VonSterneck*98">
+   <li class="bibentry" id="VonSterneck*98"><a name="VonSterneck*98">
      <span class="authoryear" alt="VonSterneck*98">von Sterneck, R.D. 1898</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">Bemerkung &uuml;ber die Summierung einiger zahlentheorischen   Funktionen.</span>
@@ -1550,14 +1556,14 @@ MathJax.Hub.Config({
      &nbsp;&nbsp;&nbsp;<span class="title">Real zeros of real odd Dirichlet L-functions.</span>
      <span class="refs"> Math. Comp.,  73(245), 415--423.</span>
    </li>
-   <li class="bibentry" id="Wedeniwski*02"><a name="Wedeniwski*02">
+</div>
+<div class="oddselection">   <li class="bibentry" id="Wedeniwski*02"><a name="Wedeniwski*02">
      <span class="authoryear" alt="Wedeniwski*02">Wedeniwski, S. 2002</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">On the Riemann hypothesis.</span>
      <span class="refs">http://www.zetagrid.net/zeta/announcements.html</span>
    </li>
-</div>
-<div class="oddselection">   <li class="bibentry" id="Wolke*83"><a name="Wolke*83">
+   <li class="bibentry" id="Wolke*83"><a name="Wolke*83">
      <span class="authoryear" alt="Wolke*83">Wolke, D. 1983</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">On the explicit formula of Riemann-von Mangoldt, II.</span>
@@ -1569,7 +1575,7 @@ MathJax.Hub.Config({
      &nbsp;&nbsp;&nbsp;<span class="title">First occurence prime gaps.</span>
      <span class="refs"> Math. Comp.,  52(185), 221--224.</span>
    </li>
-</div><br><div class="discret">There are 242 references.</div>
+</div><br><div class="discret">There are 243 references.</div>
 </ul>
 
 
