--- a/Biblio/Biblio.html
+++ b/Biblio/Biblio.html
@@ -1095,7 +1095,13 @@ MathJax.Hub.Config({
      <span class="refs"> J. Number Theory,  157, 329--349.</span>
    </li>
 </div>
-<div class="evenselection">   <li class="bibentry" id="Nathanson*96-2"><a name="Nathanson*96-2">
+<div class="evenselection">   <li class="bibentry" id="Mossinghoff-Starichkova-Trudgian*22"><a name="Mossinghoff-Starichkova-Trudgian*22">
+     <span class="authoryear" alt="Mossinghoff-Starichkova-Trudgian*22">Mossinghoff, Michael J., Starichkova, Valeriia V., &amp; Trudgian, Timothy S.   2022</span></a>
+<br>
+     &nbsp;&nbsp;&nbsp;<span class="title">Explicit lower bounds on {$|L (1, \chi)|$}.</span>
+     <span class="refs"> J. Number Theory,  240, 641--655.</span>
+   </li>
+   <li class="bibentry" id="Nathanson*96-2"><a name="Nathanson*96-2">
      <span class="authoryear" alt="Nathanson*96-2">Nathanson, Melvyn B. 1996</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">Additive number theory -- The classical bases.</span>
@@ -1119,14 +1125,14 @@ MathJax.Hub.Config({
      &nbsp;&nbsp;&nbsp;<span class="title">Majorations explicites pour le nombre de diviseurs de $n$.</span>
      <span class="refs"> Canad. Math. Bull.,  39, 485--492.</span>
    </li>
-   <li class="bibentry" id="Odlyzko*87"><a name="Odlyzko*87">
+</div>
+<div class="oddselection">   <li class="bibentry" id="Odlyzko*87"><a name="Odlyzko*87">
      <span class="authoryear" alt="Odlyzko*87">Odlyzko, A.M. 1987</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">On the distribution of spacings between zeros of the zeta function.</span>
      <span class="refs"> Math. Comp.,  48(177), 273--308.</span>
    </li>
-</div>
-<div class="oddselection">   <li class="bibentry" id="Omar*01"><a name="Omar*01">
+   <li class="bibentry" id="Omar*01"><a name="Omar*01">
      <span class="authoryear" alt="Omar*01">Omar, S. 2001</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">Localization of the first zero of the Dedekind zeta function.</span>
@@ -1150,14 +1156,14 @@ MathJax.Hub.Config({
      &nbsp;&nbsp;&nbsp;<span class="title">An explicit upper bound for {$|\zeta (1+it) |$}.</span>
      <span class="refs"> Indag. Math. (N.S.),  33(5), 1012--1032.</span>
    </li>
-   <li class="bibentry" id="Platt-Trudgian*21a"><a name="Platt-Trudgian*21a">
+</div>
+<div class="evenselection">   <li class="bibentry" id="Platt-Trudgian*21a"><a name="Platt-Trudgian*21a">
      <span class="authoryear" alt="Platt-Trudgian*21a">Platt, Dave, &amp; Trudgian, Tim. 2021a</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">The Riemann hypothesis is true up to {$3\cdot10^{12}$}.</span>
      <span class="refs"> Bull. Lond. Math. Soc.,  53(3), 792--797.</span>
    </li>
-</div>
-<div class="evenselection">   <li class="bibentry" id="Platt*17"><a name="Platt*17">
+   <li class="bibentry" id="Platt*17"><a name="Platt*17">
      <span class="authoryear" alt="Platt*17">Platt, David J. 2017</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">Isolating some non-trivial zeros of zeta.</span>
@@ -1181,14 +1187,14 @@ MathJax.Hub.Config({
      &nbsp;&nbsp;&nbsp;<span class="title">Numerical computations concerning the GRH.</span>
   <a href="http://arxiv.org/abs/1305.3087">URL</a>     <span class="refs">Ph.D. thesis.   .</span>
    </li>
-   <li class="bibentry" id="Ramare*12-0"><a name="Ramare*12-0">
+</div>
+<div class="oddselection">   <li class="bibentry" id="Ramare*12-0"><a name="Ramare*12-0">
      <span class="authoryear" alt="Ramare*12-0">Platt, D.J., &amp; Ramar&eacute;, O. 2017</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">Explicit estimates: from ${\Lambda}(n)$ in arithmetic progressions to   ${\Lambda}(n)/n$.</span>
      <span class="refs"> Exp. Math.,  26, 77--92.</span>
    </li>
-</div>
-<div class="oddselection">   <li class="bibentry" id="Pohst-Zassenhaus*89"><a name="Pohst-Zassenhaus*89">
+   <li class="bibentry" id="Pohst-Zassenhaus*89"><a name="Pohst-Zassenhaus*89">
      <span class="authoryear" alt="Pohst-Zassenhaus*89">Pohst, M., &amp; Zassenhaus, H. 1989</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">Algorithmic algebraic number theory.</span>
@@ -1212,14 +1218,14 @@ MathJax.Hub.Config({
      &nbsp;&nbsp;&nbsp;<span class="title">An inequality of Vinogradov for character sums.</span>
      <span class="refs"> Shandong Daxue Xuebao Ziran Kexue Ban,  26(1), 125--128.</span>
    </li>
-   <li class="bibentry" id="Rademacher*59"><a name="Rademacher*59">
+</div>
+<div class="evenselection">   <li class="bibentry" id="Rademacher*59"><a name="Rademacher*59">
      <span class="authoryear" alt="Rademacher*59">Rademacher, H. 1959</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">On the Phragm&eacute;n-Lindel&ouml;f theorem and some applications.</span>
      <span class="refs"> Math. Z.,  72, 192--204.</span>
    </li>
-</div>
-<div class="evenselection">   <li class="bibentry" id="Ramare*95"><a name="Ramare*95">
+   <li class="bibentry" id="Ramare*95"><a name="Ramare*95">
      <span class="authoryear" alt="Ramare*95">Ramar&eacute;, O. 1995</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">On Snirel'man's constant.</span>
@@ -1243,14 +1249,14 @@ MathJax.Hub.Config({
      &nbsp;&nbsp;&nbsp;<span class="title">Approximate Formulae for $L(1,\chi)$, II.</span>
      <span class="refs"> Acta Arith.,  112, 141--149.</span>
    </li>
-   <li class="bibentry" id="Ramare*07a"><a name="Ramare*07a">
+</div>
+<div class="oddselection">   <li class="bibentry" id="Ramare*07a"><a name="Ramare*07a">
      <span class="authoryear" alt="Ramare*07a">Ramar&eacute;, O. 2007</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">Eigenvalues in the large sieve inequality.</span>
      <span class="refs"> Funct. Approximatio, Comment. Math.,  37, 7--35.</span>
    </li>
-</div>
-<div class="oddselection">   <li class="bibentry" id="Ramare*06"><a name="Ramare*06">
+   <li class="bibentry" id="Ramare*06"><a name="Ramare*06">
      <span class="authoryear" alt="Ramare*06">Ramar&eacute;, O. 2009</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">Arithmetical aspects of the large sieve inequality.</span>
@@ -1274,14 +1280,14 @@ MathJax.Hub.Config({
      &nbsp;&nbsp;&nbsp;<span class="title">From explicit estimates for the primes to explicit estimates for the   Moebius function.</span>
      <span class="refs"> Acta Arith.,  157(4), 365--379.</span>
    </li>
-   <li class="bibentry" id="Ramare*12-4"><a name="Ramare*12-4">
+</div>
+<div class="evenselection">   <li class="bibentry" id="Ramare*12-4"><a name="Ramare*12-4">
      <span class="authoryear" alt="Ramare*12-4">Ramar&eacute;, O. 2013c</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">Some elementary explicit bounds for two mollifications of the   Moebius function.</span>
      <span class="refs"> Functiones et Approximatio,  49(2), 229--240.</span>
    </li>
-</div>
-<div class="evenselection">   <li class="bibentry" id="Ramare*12-3"><a name="Ramare*12-3">
+   <li class="bibentry" id="Ramare*12-3"><a name="Ramare*12-3">
      <span class="authoryear" alt="Ramare*12-3">Ramar&eacute;, O. 2014</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">Explicit estimates on the summatory functions of the Moebius   function with coprimality restrictions.</span>
@@ -1305,14 +1311,14 @@ MathJax.Hub.Config({
      &nbsp;&nbsp;&nbsp;<span class="title">Modified truncated Perron formulae.</span>
      <span class="refs"> Ann. Blaise Pascal,  23(1), 109--128.</span>
    </li>
-   <li class="bibentry" id="Ramare-Rumely*96"><a name="Ramare-Rumely*96">
+</div>
+<div class="oddselection">   <li class="bibentry" id="Ramare-Rumely*96"><a name="Ramare-Rumely*96">
      <span class="authoryear" alt="Ramare-Rumely*96">Ramar&eacute;, O., &amp; Rumely, R. 1996</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">Primes in arithmetic progressions.</span>
      <span class="refs"> Math. Comp.,  65, 397--425.</span>
    </li>
-</div>
-<div class="oddselection">   <li class="bibentry" id="Ramare-Saouter*02"><a name="Ramare-Saouter*02">
+   <li class="bibentry" id="Ramare-Saouter*02"><a name="Ramare-Saouter*02">
      <span class="authoryear" alt="Ramare-Saouter*02">Ramar&eacute;, O., &amp; Saouter, Y. 2003</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">Short effective intervals containing primes.</span>
@@ -1336,14 +1342,14 @@ MathJax.Hub.Config({
      &nbsp;&nbsp;&nbsp;<span class="title">On sums of primes.</span>
      <span class="refs"> Ark. Mat.,  21, 46--74.</span>
    </li>
-   <li class="bibentry" id="Robin*83-1"><a name="Robin*83-1">
+</div>
+<div class="evenselection">   <li class="bibentry" id="Robin*83-1"><a name="Robin*83-1">
      <span class="authoryear" alt="Robin*83-1">Robin, G. 1983a</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">Estimation de la fonction de Tchebychef $\theta$ sur le $k$-i&egrave;me   nombres premiers et grandes valeurs de la fonction $\omega(n)$ nombre de   diviseurs premiers de $n$.</span>
      <span class="refs"> Acta Arith.,  42, 367--389.</span>
    </li>
-</div>
-<div class="evenselection">   <li class="bibentry" id="Robin*83-0"><a name="Robin*83-0">
+   <li class="bibentry" id="Robin*83-0"><a name="Robin*83-0">
      <span class="authoryear" alt="Robin*83-0">Robin, G. 1983b</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">Grandes valeurs de fonctions arithm&eacute;tiques et probl&egrave;mes   d'optimisation en nombres entiers.</span>
@@ -1367,14 +1373,14 @@ MathJax.Hub.Config({
      &nbsp;&nbsp;&nbsp;<span class="title">Real roots of Dirichlet $L$-series.</span>
      <span class="refs"> Bull. Amer. Math. Soc.,  55, 906--913.</span>
    </li>
-   <li class="bibentry" id="Rosser*50"><a name="Rosser*50">
+</div>
+<div class="oddselection">   <li class="bibentry" id="Rosser*50"><a name="Rosser*50">
      <span class="authoryear" alt="Rosser*50">Rosser, J.B. 1950</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">Real roots of Dirichlet $L$-series.</span>
      <span class="refs"> J. Res. Nat. Bur. Standards,  505--514.</span>
    </li>
-</div>
-<div class="oddselection">   <li class="bibentry" id="Rosser-Schoenfeld*62"><a name="Rosser-Schoenfeld*62">
+   <li class="bibentry" id="Rosser-Schoenfeld*62"><a name="Rosser-Schoenfeld*62">
      <span class="authoryear" alt="Rosser-Schoenfeld*62">Rosser, J.B., &amp; Schoenfeld, L. 1962</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">Approximate formulas for some functions of prime numbers.</span>
@@ -1398,14 +1404,14 @@ MathJax.Hub.Config({
      &nbsp;&nbsp;&nbsp;<span class="title">A sharp region where {$\pi(x)-{\rm li}(x)$} is positive.</span>
      <span class="refs"> Math. Comp.,  79(272), 2395--2405.</span>
    </li>
-   <li class="bibentry" id="Schoenfeld*69"><a name="Schoenfeld*69">
+</div>
+<div class="evenselection">   <li class="bibentry" id="Schoenfeld*69"><a name="Schoenfeld*69">
      <span class="authoryear" alt="Schoenfeld*69">Schoenfeld, L. 1969</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">An improved estimate for the summatory function of the M&ouml;bius   function.</span>
      <span class="refs"> Acta Arith.,  15, 223--233.</span>
    </li>
-</div>
-<div class="evenselection">   <li class="bibentry" id="Schoenfeld*76"><a name="Schoenfeld*76">
+   <li class="bibentry" id="Schoenfeld*76"><a name="Schoenfeld*76">
      <span class="authoryear" alt="Schoenfeld*76">Schoenfeld, L. 1976</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">Sharper bounds for the Chebyshev Functions $\vartheta(X)$ and   $\psi(X)$ II.</span>
@@ -1429,14 +1435,14 @@ MathJax.Hub.Config({
      &nbsp;&nbsp;&nbsp;<span class="title">Calculation of Dirichlet {$L$}-functions.</span>
      <span class="refs"> Math. Comp.,  23, 489--497.</span>
    </li>
-   <li class="bibentry" id="Stechkin*70"><a name="Stechkin*70">
+</div>
+<div class="oddselection">   <li class="bibentry" id="Stechkin*70"><a name="Stechkin*70">
      <span class="authoryear" alt="Stechkin*70">Stechkin, S.B. 1970</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">Zeros of Riemann zeta-function.</span>
      <span class="refs"> Math. Notes,  8, 706--711.</span>
    </li>
-</div>
-<div class="oddselection">   <li class="bibentry" id="Stechkin*89"><a name="Stechkin*89">
+   <li class="bibentry" id="Stechkin*89"><a name="Stechkin*89">
      <span class="authoryear" alt="Stechkin*89">Stechkin, S.B. 1989</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">Rational inequalities and zeros of the Riemann zeta-function.</span>
@@ -1460,14 +1466,14 @@ MathJax.Hub.Config({
      &nbsp;&nbsp;&nbsp;<span class="title">On the zeros of the Riemann zeta function.</span>
      <span class="refs"> Quart. J. Math., Oxford Ser.,  18, 4--16.</span>
    </li>
-   <li class="bibentry" id="Trevino*12"><a name="Trevino*12">
+</div>
+<div class="evenselection">   <li class="bibentry" id="Trevino*12"><a name="Trevino*12">
      <span class="authoryear" alt="Trevino*12">Trevi&ntilde;o, Enrique. 2012</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">The least inert prime in a real quadratic field.</span>
      <span class="refs"> Math. Comp.,  81(279), 1777--1797.</span>
    </li>
-</div>
-<div class="evenselection">   <li class="bibentry" id="Trevino*15-2"><a name="Trevino*15-2">
+   <li class="bibentry" id="Trevino*15-2"><a name="Trevino*15-2">
      <span class="authoryear" alt="Trevino*15-2">Trevi&ntilde;o, Enrique. 2015a</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">The Burgess inequality and the least {$k$}th power non-residue.</span>
@@ -1491,14 +1497,14 @@ MathJax.Hub.Config({
      &nbsp;&nbsp;&nbsp;<span class="title">An improved upper bound for the error in the zero-counting formulae   for Dirichlet $L$-function and Dedekind zeta-function on the critical   line.</span>
      <span class="refs"> Math. Comp.,  84(293), 1439--1450.</span>
    </li>
-   <li class="bibentry" id="Trudgian*15-2"><a name="Trudgian*15-2">
+</div>
+<div class="oddselection">   <li class="bibentry" id="Trudgian*15-2"><a name="Trudgian*15-2">
      <span class="authoryear" alt="Trudgian*15-2">Trudgian, Tim. 2015b</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">Bounds on the number of Diophantine quintuples.</span>
      <span class="refs"> J. Number Theory,  157, 233--249.</span>
    </li>
-</div>
-<div class="oddselection">   <li class="bibentry" id="Trudgian*16"><a name="Trudgian*16">
+   <li class="bibentry" id="Trudgian*16"><a name="Trudgian*16">
      <span class="authoryear" alt="Trudgian*16">Trudgian, Tim. 2016</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">Updating the error term in the prime number theorem.</span>
@@ -1522,14 +1528,14 @@ MathJax.Hub.Config({
      &nbsp;&nbsp;&nbsp;<span class="title">On the zeros of the Riemann zeta-function in the critical strip.   IV.</span>
      <span class="refs"> Math. Comp.,  46(174), 667--681.</span>
    </li>
-   <li class="bibentry" id="van-Lint-Richert*65"><a name="van-Lint-Richert*65">
+</div>
+<div class="evenselection">   <li class="bibentry" id="van-Lint-Richert*65"><a name="van-Lint-Richert*65">
      <span class="authoryear" alt="van-Lint-Richert*65">van Lint, J.E., &amp; Richert, H.E. 1965</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">On primes in arithmetic progressions.</span>
      <span class="refs"> Acta Arith.,  11, 209--216.</span>
    </li>
-</div>
-<div class="evenselection">   <li class="bibentry" id="Vinogradov*54"><a name="Vinogradov*54">
+   <li class="bibentry" id="Vinogradov*54"><a name="Vinogradov*54">
      <span class="authoryear" alt="Vinogradov*54">Vinogradov, I.M. 2004</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">The method of trigonometrical sums in the theory of numbers.</span>
@@ -1553,14 +1559,14 @@ MathJax.Hub.Config({
      &nbsp;&nbsp;&nbsp;<span class="title">Analogues of the Robin-Lagarias criteria for the Riemann   hypothesis.</span>
      <span class="refs"> Int. J. Number Theory,  17(4), 843--870.</span>
    </li>
-   <li class="bibentry" id="Watkins*00-1"><a name="Watkins*00-1">
+</div>
+<div class="oddselection">   <li class="bibentry" id="Watkins*00-1"><a name="Watkins*00-1">
      <span class="authoryear" alt="Watkins*00-1">Watkins, M. 2004</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">Real zeros of real odd Dirichlet L-functions.</span>
      <span class="refs"> Math. Comp.,  73(245), 415--423.</span>
    </li>
-</div>
-<div class="oddselection">   <li class="bibentry" id="Wedeniwski*02"><a name="Wedeniwski*02">
+   <li class="bibentry" id="Wedeniwski*02"><a name="Wedeniwski*02">
      <span class="authoryear" alt="Wedeniwski*02">Wedeniwski, S. 2002</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">On the Riemann hypothesis.</span>
@@ -1578,7 +1584,7 @@ MathJax.Hub.Config({
      &nbsp;&nbsp;&nbsp;<span class="title">First occurence prime gaps.</span>
      <span class="refs"> Math. Comp.,  52(185), 221--224.</span>
    </li>
-</div><br><div class="discret">There are 243 references.</div>
+</div><br><div class="discret">There are 244 references.</div>
 </ul>
 
 
