--- a/Biblio/Biblio.html
+++ b/Biblio/Biblio.html
@@ -1609,13 +1609,20 @@ MathJax.Hub.Config({
      &nbsp;&nbsp;&nbsp;<span class="title">On the explicit formula of Riemann-von Mangoldt, II.</span>
      <span class="refs"> J. London Math. Soc.,  2(28).</span>
    </li>
+   <li class="bibentry" id="Yangjit*23"><a name="Yangjit*23">
+     <span class="authoryear" alt="Yangjit*23">Yangjit, Wijit. 2023</span></a>
+<br>
+     &nbsp;&nbsp;&nbsp;<span class="title">On the Montgomery--Vaughan weighted generalization of Hilbert's   inequality.</span>
+     <span class="refs"> Proc. Amer. Math. Soc. Ser. B,  10, 439--454.</span>
+   </li>
    <li class="bibentry" id="Young-Potler*89"><a name="Young-Potler*89">
      <span class="authoryear" alt="Young-Potler*89">Young, A., &amp; Potler, J. 1989</span></a>
 <br>
      &nbsp;&nbsp;&nbsp;<span class="title">First occurence prime gaps.</span>
      <span class="refs"> Math. Comp.,  52(185), 221--224.</span>
    </li>
-</div><br><div class="discret">There are 249 references.</div>
+</div>
+<div class="oddselection"></div><br><div class="discret">There are 250 references.</div>
 </ul>
 
 
